[tool.poetry]
name = "scanner"
version = "1.0.1"
description = "Многопоточный инструмент сетевой разведки, выполняющий автоматическое сканирование сервисов."
authors = ["Alexandr Zonov"]
license = "GNU GPL v3"
exclude = ["scanner.py"]
packages = [
	{ include = "autorecon" },
]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
colorama = "^0.4.5"
impacket = "^0.10.0"
requests = "^2.28.1"
toml = "^0.10.2"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
autorecon = "autorecon.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
